chore: Add GitHub worflow for main and PRs (#19)
* chore: Add GitHub worflow for main and PRs that includes linting, typecheck, testing, knip for unused code and scripts for i18n validation

* chore: Add audit, build and dependabot to the workflow

* chore: update test scripts to include --run flag for unit and nuxt tests

* chore: add --experimental-strip-types flag to i18n scripts and update node engine requirement

* chore: fix typos and formatting in CI workflow

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -1,17 +1,7 @@
 {
   "common": {
     "title": "Flumen",
-    "description": "Open source, streamlined.",
-    "yes": "Ja",
-    "no": "Nein",
-    "cancel": "Abbrechen",
-    "save": "Änderungen speichern",
-    "delete": "Löschen",
-    "edit": "Bearbeiten",
-    "create": "Erstellen",
-    "close": "Schließen",
-    "confirm": "Bestätigen",
-    "loading": "Laden..."
+    "description": "Open source, streamlined."
   },
   "nav": {
     "dashboard": "Dashboard",
@@ -24,7 +14,6 @@
   "auth": {
     "loginWithGithub": "Mit GitHub anmelden",
     "login": "Anmelden",
-    "logout": "Abmelden",
     "forbidden": "Du musst dich anmelden, um auf diese Seite zuzugreifen."
   },
   "welcome": {
@@ -32,8 +21,7 @@
   },
   "theme": {
     "light": "Hell",
-    "dark": "Dunkel",
-    "system": "System"
+    "dark": "Dunkel"
   },
   "settings": {
     "appearance": {
