--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,17 +1,7 @@
 {
   "common": {
     "title": "Flumen",
-    "description": "Open source, streamlined.",
-    "yes": "Yes",
-    "no": "No",
-    "cancel": "Cancel",
-    "save": "Save changes",
-    "delete": "Delete",
-    "edit": "Edit",
-    "create": "Create",
-    "close": "Close",
-    "confirm": "Confirm",
-    "loading": "Loading..."
+    "description": "Open source, streamlined."
   },
   "nav": {
     "dashboard": "Dashboard",
@@ -24,7 +14,6 @@
   "auth": {
     "loginWithGithub": "Login with GitHub",
     "login": "Login",
-    "logout": "Logout",
     "forbidden": "You need to log in to access this page."
   },
   "welcome": {
@@ -32,8 +21,7 @@
   },
   "theme": {
     "light": "Light",
-    "dark": "Dark",
-    "system": "System"
+    "dark": "Dark"
   },
   "settings": {
     "appearance": {
