fix: failed pipeline because of dynamic translations and missing knip config
* fix: add mapping for translation to replace dynamic translations that can't be picked up by the script

* fix: Add 'vue' and 'nuxt' to ignored dependencies in knip config

* chore: update schema.json for translations

* fix: add missing translations for github notifications

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -62,7 +62,15 @@
       "review_requested": "Review angefragt",
       "assign": "zugewiesen",
       "state_change": "Status geändert",
-      "ci_activity": "CI"
+      "ci_activity": "CI",
+      "approval_requested": "Freigabe angefordert",
+      "invitation": "Einladung",
+      "manual": "Manuell",
+      "member_feature_requested": "Mitgliedsfunktion angefordert",
+      "security_advisory_credit": "Sicherheitsmeldung gutgeschrieben",
+      "security_alert": "Sicherheitswarnung",
+      "team_mention": "Team-Erwähnung",
+      "unknown": "Unbekannt"
     },
     "activity": {
       "recent": "Diese Woche aktiv",
