fix: add missing translation

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -23,7 +23,8 @@
   },
   "theme": {
     "light": "Hell",
-    "dark": "Dunkel"
+    "dark": "Dunkel",
+    "system": "System"
   },
   "time": {
     "justNow": "gerade eben",
