--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -23,7 +23,8 @@
   },
   "theme": {
     "light": "Light",
-    "dark": "Dark"
+    "dark": "Dark",
+    "system": "System"
   },
   "time": {
     "justNow": "just now",
