--- a/i18n/schema.json
+++ b/i18n/schema.json
@@ -78,6 +78,9 @@
         },
         "dark": {
           "type": "string"
+        },
+        "system": {
+          "type": "string"
         }
       },
       "additionalProperties": false
